[package]
name = "mluau-require"
version = "0.1.0"
edition = "2024"

[dependencies]
vfs = { git = "https://github.com/Anti-Raid/rust-vfs", features = ["embedded-fs"] } # TODO: switch to a mluau fork soon
mluau = { git = "https://github.com/mluau/mluau" }
log = { version = "0.4", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.12.1", features = ["serde"] }
log = "0.4"
env_logger = "0.11.8"

[features]
log = ["dep:log"]
